Completed styling showcase section of page

--- a/Blooger/sass/_base.scss
+++ b/Blooger/sass/_base.scss
@@ -5,6 +5,7 @@
 	--bg-color: #0f0f0f;
 	--white: #ffff;
 	--midnight: #104f55;
+	--black: #000;
 
 	// Gradient color
 	--sky: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
