--- a/Blooger/css/style.css
+++ b/Blooger/css/style.css
@@ -4,6 +4,7 @@
   --bg-color: #0f0f0f;
   --white: #ffff;
   --midnight: #104f55;
+  --black: #000;
   --sky: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
   --Abel: 'Abel', cursive;
   --Anton: 'Anton', cursive;
@@ -84,10 +85,17 @@ ul {
   background: url("../img/Background-image.png");
   background-size: cover;
   height: 100rem;
-  display: flex; }
-  .showcase__showcase__content {
-    justify-content: center;
-    align-items: center; }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--white); }
+  .showcase__content > *:not(:last-child) {
+    margin-bottom: 3rem; }
+  .showcase__content .btn:hover {
+    background: transparent;
+    border: 1px solid var(--white);
+    color: var(--white); }
 
 .header {
   display: flex;
@@ -95,3 +103,24 @@ ul {
   padding: 2rem;
   align-items: center;
   justify-content: space-between; }
+
+.btn {
+  background: var(--sky);
+  border: none;
+  outline: none;
+  padding: 2rem 6rem;
+  border-radius: 3.3rem;
+  color: var(--text-grey);
+  font-size: 1.8rem;
+  font-family: var(--Livvic);
+  cursor: pointer; }
+
+h1 {
+  font-family: var(--Lexend);
+  font-size: 5rem; }
+
+h3 {
+  font-size: 2.5rem; }
+
+h2 {
+  font-family: var(--Lexend); }
