--- a/Blooger/sass/_components.scss
+++ b/Blooger/sass/_components.scss
@@ -87,9 +87,19 @@
 	background-size: cover;
 	height: 100rem;
 	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	color: var(--white);
 
-	&__showcase__content {
-		justify-content: center;
-		align-items: center;
+	&__content {
+		& > *:not(:last-child) {
+			margin-bottom: 3rem;
+		}
+		.btn:hover {
+			background: transparent;
+			border: 1px solid var(--white);
+			color: var(--white);
+		}
 	}
 }
