Completed discovery section style

--- a/Rosa/sass/_utils.scss
+++ b/Rosa/sass/_utils.scss
@@ -18,3 +18,10 @@ p {
 ul {
 	list-style: none;
 }
+
+.btn {
+	display: inline-block;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	margin-right: -2px;
+}
