--- a/Rosa/css/style.css
+++ b/Rosa/css/style.css
@@ -118,14 +118,13 @@ header {
   background-size: cover;
   display: flex;
   align-items: center;
-  justify-content: center;
   text-align: center; }
 
 .sub-headline {
   font-size: 8.5rem;
   font-family: var(--secondary-font);
   color: var(--secondary-font-color);
-  font-weight: 400;
+  font-weight: 100;
   line-height: 0.4;
   letter-spacing: 2px; }
 
@@ -142,6 +141,114 @@ header {
   letter-spacing: 0.5rem;
   margin-right: -0.5rem; }
 
+.separator {
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.line {
+  width: 100%;
+  max-width: 8.4rem;
+  height: 0.25rem;
+  background-color: #fff;
+  position: relative; }
+
+.line-right::before,
+.line-left::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 0.6rem solid transparent; }
+
+.line-right::before {
+  border-right-color: #fff;
+  right: 0; }
+
+.line-left::before {
+  border-left-color: #fff;
+  left: 0; }
+
+.asterisk {
+  font-size: 1.2rem;
+  color: var(--secondary-font-color);
+  margin: 0 1.6rem; }
+
+.headline-description h5 {
+  color: #fff;
+  font-size: 1.4rem;
+  font-weight: 100;
+  text-transform: uppercase;
+  margin-bottom: 1.2rem;
+  letter-spacing: 3px;
+  margin-right: -3px; }
+
+.cta-btn {
+  font-size: 1.1rem;
+  background-color: #fff;
+  padding: 0.9rem 1.8rem;
+  color: var(--main-font-color);
+  border-radius: 0.4rem;
+  transition: background-color 0.5s; }
+
+.cta-btn:hover,
+.cta-btn:focus {
+  color: #fff;
+  background-color: var(--secondary-font-color); }
+
+.global-headline {
+  text-align: center;
+  margin-top: 3.9rem; }
+
+.discover-our-story .global-headline {
+  margin-top: 6.9rem; }
+
+.global-headline .asterisk {
+  color: var(--body-font-color);
+  margin: 2.4rem 0; }
+
+.headline-dark {
+  color: var(--maint-font-color-dark);
+  letter-spacing: 0.7rem;
+  margin-right: -0.7rem; }
+
+.global-headline .sub-headline {
+  letter-spacing: -1px;
+  line-height: 0.42; }
+
+.restaraunt-info {
+  text-align: center; }
+
+.restaraunt-description {
+  margin-bottom: 3rem; }
+  .restaraunt-description > p {
+    line-height: 1.6;
+    margin-bottom: 2.4rem; }
+
+.body-btn {
+  font-size: 1.5rem;
+  color: var(--secondary-font-color);
+  position: relative;
+  transition: color 0.5s; }
+
+.body-btn::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -3px;
+  width: 100%;
+  height: 2px;
+  background-color: var(--secondary-font-color);
+  transition: background-color 0.5s; }
+
+.body-btn:hover,
+.body-btn:focus {
+  color: var(--mian-font-color-dark); }
+
+.body-btn:hover::before,
+.body-btn:focus::before {
+  background: var(--main-font-color-dark); }
+
 section {
   padding: 3.9rem 0; }
 
@@ -157,3 +264,9 @@ p {
 
 ul {
   list-style: none; }
+
+.btn {
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-right: -2px; }
