completed slyting seciton Tasteful

--- a/Rosa/css/style.css
+++ b/Rosa/css/style.css
@@ -249,6 +249,15 @@ header {
 .body-btn:focus::before {
   background: var(--main-font-color-dark); }
 
+.tasteful-recipes {
+  background: url("/img/tasteful-recipes.jpg") center no-repeat;
+  background-size: cover; }
+
+.between {
+  min-height: 65vh;
+  display: flex;
+  align-items: center; }
+
 section {
   padding: 3.9rem 0; }
 
