--- a/Rosa/sass/_components.scss
+++ b/Rosa/sass/_components.scss
@@ -272,4 +272,15 @@ header {
 	background: var(--main-font-color-dark);
 }
 
-// Tasteful recipes
+// Tasteful recipes SECTION
+
+.tasteful-recipes {
+	background: url('/img/tasteful-recipes.jpg') center no-repeat;
+	background-size: cover;
+}
+
+.between {
+	min-height: 65vh;
+	display: flex;
+	align-items: center;
+}
