--- a/Rosa/css/style.css
+++ b/Rosa/css/style.css
@@ -258,6 +258,15 @@ header {
   display: flex;
   align-items: center; }
 
+.image-group {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1.5rem; }
+
+.discover-our-menu .restaurant-description {
+  padding-top: 3rem;
+  margin-bottom: 0; }
+
 section {
   padding: 3.9rem 0; }
 
