--- a/Rosa/sass/_components.scss
+++ b/Rosa/sass/_components.scss
@@ -284,3 +284,18 @@ header {
 	display: flex;
 	align-items: center;
 }
+
+// Discover our menu SECTION
+
+.image-group {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 1.5rem;
+}
+
+.discover-our-menu .restaurant-description {
+	padding-top: 3rem;
+	margin-bottom: 0;
+}
+
+//
